новая ручка deacticate
